force-app/main/default/objects/public_parts_list__x/public_parts_list__x.object-meta.xml
<CustomObject>
    <description>public$parts_list</description>
    <externalDataSource>ExternalData</externalDataSource>
    <externalName>public$parts_list</externalName>
    <label>Part (External)</label>
    <pluralLabel>Parts (External)</pluralLabel>
</CustomObject>