force-app/main/default/objects/public_parts_list__x/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <description>category</description>
    <externalDeveloperName>category</externalDeveloperName>
    <label>category</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>