force-app/main/default/objects/public_parts_list__x/fields/partnumber__c.field-meta.xml
<CustomField>
    <fullName>partnumber__c</fullName>
    <description>partnumber</description>
    <externalDeveloperName>partnumber</externalDeveloperName>
    <label>partnumber</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>