force-app/main/default/objects/public_parts_list__x/fields/supplier__c.field-meta.xml
<CustomField>
    <fullName>supplier__c</fullName>
    <description>supplier</description>
    <externalDeveloperName>supplier</externalDeveloperName>
    <label>supplier</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>